@@ -1,6 +1,13 @@
 
 === ppracer 0.5 alpha2 ===
 
+2005-10-21  Volker Stroebel <volker@planetpenguin.de>
+	* src/course_load.cpp
+	reset item states if course is not reloaded
+
+	* data/config.nut.in * src/trackmarks.*
+	added max_track_marks	
+	
 2005-10-20  Volker Stroebel <volker@planetpenguin.de>
 	* src/hier*
 	replaced Material with ppogl::Material
